chore: batch 1s worth of frames